prodMetadata/src/objects/Legislation__c.object
<CustomObject>
    <fields>
        <fullName>AKA__c</fullName>
        <inlineHelpText>Any alternate names that IAVA uses to refer to this bill, i.e. &quot;New GI Bill 2.0&quot;</inlineHelpText>
        <label>AKA</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether IAVA is currently tracking this bill</description>
        <inlineHelpText>Whether IAVA is currently tracking this bill</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_Number__c</fullName>
        <description>Just the numerical part of the bill or amendment number.</description>
        <inlineHelpText>Just the numerical part of the bill or amendment number.</inlineHelpText>
        <label>Bill Number</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_Prefix__c</fullName>
        <description>Bill prefix corresponding to bill title, e.g. &quot;HR&quot; for HR1212</description>
        <inlineHelpText>Bill prefix corresponding to bill title, e.g. &quot;HR&quot; for HR1212</inlineHelpText>
        <label>Bill Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>HRES</fullName>
                </value>
                <value>
                    <fullName>HJRES</fullName>
                </value>
                <value>
                    <fullName>HCRES</fullName>
                </value>
                <value>
                    <fullName>SRES</fullName>
                </value>
                <value>
                    <fullName>SJRES</fullName>
                </value>
                <value>
                    <fullName>SCRES</fullName>
                </value>
                <value>
                    <fullName>HAMDT</fullName>
                </value>
                <value>
                    <fullName>SAMDT</fullName>
                </value>
                <value>
                    <fullName>IAVA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bill_Title__c</fullName>
        <description>Title of proposed bill.  Leave out Bill Number (e.g. HR3254), which should go into Bill Number field.</description>
        <inlineHelpText>Title of proposed bill.  Leave out Bill Number (e.g. HR3254), which should go into Bill Number field.</inlineHelpText>
        <label>Bill Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Defense</fullName>
                </value>
                <value>
                    <fullName>Jobs</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>GI Bill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Congressional_Session__c</fullName>
        <description>E.g. for the 112th congress select 112.  Must be filled in for Thomas link to work.</description>
        <inlineHelpText>E.g. for the 112th congress select 112.  Must be filled in for Thomas link to work.</inlineHelpText>
        <label>Congressional Session</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>115</fullName>
                </value>
                <value>
                    <fullName>114</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>113</fullName>
                </value>
                <value>
                    <fullName>112</fullName>
                </value>
                <value>
                    <fullName>111</fullName>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>109</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cosponsors__c</fullName>
        <label>Cosponsors</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Bill_Info_Updated__c</fullName>
        <description>When bill info was last pulled in from GovTrack</description>
        <inlineHelpText>When bill info was last pulled in from GovTrack</inlineHelpText>
        <label>Date Bill Info Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_on_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the bill should appear in the DC section of the website.</description>
        <inlineHelpText>Whether the bill should appear in the DC section of the website.</inlineHelpText>
        <label>Display on Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Bill_Number__c</fullName>
        <description>Combination of prefix and number, e.g. HR5322</description>
        <formula>text( Bill_Prefix__c ) + text( Bill_Number__c )</formula>
        <inlineHelpText>Combination of prefix and number, e.g. HR5322</inlineHelpText>
        <label>Full Bill Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Introduced_Date__c</fullName>
        <description>Date the bill was introduced</description>
        <inlineHelpText>Date the bill was introduced</inlineHelpText>
        <label>Introduced Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Introduced__c</fullName>
        <label>Introduced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Major_Action__c</fullName>
        <label>Latest Major Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legislative_Body__c</fullName>
        <label>Legislative Body</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Bill_Prefix__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>House</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Senate</fullName>
                </value>
                <value>
                    <fullName>State Body</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position_Status__c</fullName>
        <label>Position/Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Review Board</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Watch</fullName>
                </value>
                <value>
                    <fullName>Ignore</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Oppose</fullName>
                </value>
                <value>
                    <fullName>No Position</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>IAVA&apos;s position on the bill</description>
        <inlineHelpText>IAVA&apos;s position on the bill</inlineHelpText>
        <label>IAVA Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Review Board</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Watch</fullName>
                </value>
                <value>
                    <fullName>Ignore</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Oppose</fullName>
                </value>
                <value>
                    <fullName>No position</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Top</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_card_eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use in report card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sponsor_Info__c</fullName>
        <label>Sponsor Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Legislation</relationshipLabel>
        <relationshipName>Legislation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_in_Congress__c</fullName>
        <label>Status in Congress</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>CRS Summary</description>
        <inlineHelpText>CRS Summary</inlineHelpText>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>THOMAS_link__c</fullName>
        <description>Link to THOMAS description of bill.  Only works if Bill Name and Congressional Session are filled in.</description>
        <formula>if(
  or(isblank(text(Congressional_Session__c)),
      isblank(text( Bill_Prefix__c )),
      isblank(text(Bill_Number__c))
  ),
&quot;Choose a value for Bill Prefix, Bill Number, and Congressional Session&quot;,
HYPERLINK(&quot;http://hdl.loc.gov/loc.uscongress/legislation.&quot; + text(Congressional_Session__c) +  LOWER(text(Bill_Prefix__c)) + text(Bill_Number__c) , &quot;View in THOMAS&quot;, &quot;_blank&quot;))</formula>
        <inlineHelpText>Link to THOMAS description of bill.  Only works if Bill Name and Congressional Session are filled in.</inlineHelpText>
        <label>THOMAS link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMC_Position__c</fullName>
        <label>TMC Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supported through TMC</fullName>
                </value>
                <value>
                    <fullName>Opposed through TMC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tweet_Template__c</fullName>
        <defaultValue>&quot;&lt;TITLE&gt; &lt;NAME&gt; stepped up to lead by co-sponsoring &lt;BILL&gt;. Thanks for having @IAVA&apos;s back, &lt;TWUSER&gt;!&quot;</defaultValue>
        <description>Tweet to be added to &quot;new co-sponsor&quot; notification email. Use &lt;BILL&gt; &lt;TITLE&gt; &lt;NAME&gt; &lt;TWUSER&gt;</description>
        <inlineHelpText>Tweet to be added to &quot;new co-sponsor&quot; notification email. Use &lt;BILL&gt; &lt;TITLE&gt; &lt;NAME&gt; &lt;TWUSER&gt;</inlineHelpText>
        <label>Tweet Template</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Uniqueness_Test__c</fullName>
        <description>Formula to ensure only one record per bill.</description>
        <label>Uniqueness Test</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Legislation</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Full_Bill_Number__c</columns>
        <columns>Bill_Title__c</columns>
        <columns>AKA__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>Latest_Major_Action__c</columns>
        <columns>Date_Bill_Info_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active is checked</label>
    </listViews>
    <listViews>
        <fullName>Active_is_checked</fullName>
        <columns>NAME</columns>
        <columns>Full_Bill_Number__c</columns>
        <columns>Bill_Title__c</columns>
        <columns>AKA__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>Latest_Major_Action__c</columns>
        <columns>Date_Bill_Info_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active is checked</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Full_Bill_Number__c</columns>
        <columns>Bill_Title__c</columns>
        <columns>Latest_Major_Action__c</columns>
        <columns>Status__c</columns>
        <columns>Position__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Congressional_Session__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Inactive</fullName>
        <columns>NAME</columns>
        <columns>Full_Bill_Number__c</columns>
        <columns>Bill_Title__c</columns>
        <columns>AKA__c</columns>
        <columns>Position__c</columns>
        <columns>Status__c</columns>
        <columns>Latest_Major_Action__c</columns>
        <columns>Date_Bill_Info_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Active is not checked</label>
    </listViews>
    <listViews>
        <fullName>Legislation_in_Review</fullName>
        <columns>Full_Bill_Number__c</columns>
        <columns>Bill_Title__c</columns>
        <columns>NAME</columns>
        <columns>Cosponsors__c</columns>
        <columns>Position__c</columns>
        <columns>Introduced_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Position__c</field>
            <operation>equals</operation>
            <value>Review Board,Review</value>
        </filters>
        <label>Legislation in Review</label>
    </listViews>
    <listViews>
        <fullName>X112th_Congress</fullName>
        <columns>NAME</columns>
        <columns>AKA__c</columns>
        <columns>Sponsor__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>TMC_Position__c</columns>
        <columns>THOMAS_link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Congressional_Session__c</field>
            <operation>equals</operation>
            <value>112</value>
        </filters>
        <label>112th Congress</label>
    </listViews>
    <listViews>
        <fullName>X113th_Roof_Portfolio_Bills</fullName>
        <columns>Bill_Prefix__c</columns>
        <columns>Bill_Number__c</columns>
        <columns>Bill_Title__c</columns>
        <columns>Sponsor__c</columns>
        <columns>Cosponsors__c</columns>
        <columns>Introduced_Date__c</columns>
        <columns>Latest_Major_Action__c</columns>
        <columns>THOMAS_link__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>AKA__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Congressional_Session__c</field>
            <operation>equals</operation>
            <value>113</value>
        </filters>
        <label>113th Roof Portfolio Bills</label>
        <sharedTo>
            <group>Chiefs</group>
            <group>Communications</group>
            <group>Directors_and_Chiefs</group>
            <group>EO</group>
            <group>Policy</group>
            <group>Research</group>
            <group>Sysadmins</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X114th</fullName>
        <columns>NAME</columns>
        <columns>Bill_Title__c</columns>
        <columns>Introduced_Date__c</columns>
        <columns>Position__c</columns>
        <columns>Sponsor__c</columns>
        <columns>THOMAS_link__c</columns>
        <columns>Status__c</columns>
        <columns>Status_in_Congress__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Congressional_Session__c</field>
            <operation>equals</operation>
            <value>114</value>
        </filters>
        <label>114th</label>
    </listViews>
    <listViews>
        <fullName>X115th</fullName>
        <columns>NAME</columns>
        <columns>Bill_Title__c</columns>
        <columns>Introduced_Date__c</columns>
        <columns>Position__c</columns>
        <columns>Sponsor__c</columns>
        <columns>THOMAS_link__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Congressional_Session__c</field>
            <operation>equals</operation>
            <value>115</value>
        </filters>
        <label>115th</label>
    </listViews>
    <listViews>
        <fullName>X1331</fullName>
        <columns>NAME</columns>
        <columns>Bill_Title__c</columns>
        <columns>Sponsor__c</columns>
        <columns>Position__c</columns>
        <columns>Introduced_Date__c</columns>
        <columns>Latest_Major_Action__c</columns>
        <columns>Status__c</columns>
        <columns>THOMAS_link__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Date_Bill_Info_Updated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>1331</value>
        </filters>
        <label>1331</label>
    </listViews>
    <nameField>
        <label>Bill ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legislation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>